--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <div class="bg-purple-200 rounded-lg shadow-lg w-full max-w-5xl p-4 sm:p-6 md:p-8 text-center">
         <h1 class="text-3xl md:text-4xl font-serif font-bold">phinX</h1>
-        <h2 class="text-2xl md:text-4xl font-serif font-bold">BUDGET TRACKER APP</h2>
+        <h2 class="text-2xl md:text-4xl font-serif font-bold">BUDGET TRACKER</h2>
 
     <!-- Input Form -->
     <div class="flex flex-col md:flex-row flex-wrap items-center w-full max-w-5xl mt-6 gap-4">
